[package]
authors = ["Christian Haynes <06chaynes@gmail.com>", "Alexander Korolev <kilork@yandex.ru>"]
build = "build.rs"
categories = ["network-programming",
              "asynchronous",
              "web-programming::http-server"]
description = """
actori-web static files as resources support.
"""
edition = "2018"
homepage = "https://github.com/actori/actori-web-static-files"
keywords = ["actori", "http", "web", "static"]
license = "Unlicense OR MIT"
name = "actori-web-static-files"
readme = "README.md"
repository = "https://github.com/actori/actori-web-static-files"
version = "0.3.0"

[dependencies]
actori-web = "2.0"
actori-service = "1.0"
futures = "0.3"
mime_guess = "2.0"
failure = "0.1"
path-slash = "0.1"

[build-dependencies]
actori-web = "2.0"
actori-service = "1.0"
futures = "0.3"
mime_guess = "2.0"
failure = "0.1"
path-slash = "0.1"
